[tool.poetry]
name = "WechatExporter-html2excel"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[[tool.poetry.source]]
name = "aliyun"
url = "https://mirrors.aliyun.com/pypi/simple/"

[tool.poetry.dependencies]
python = "^3.8,<3.11"
beautifulsoup4 = "^4.11.1"
openpyxl = "^3.0.10"
PySide6 = "^6.3.1"
pyinstaller = "^5.1"
pyside6 = "^6.3.1"

[tool.poetry.dev-dependencies]
autopep8 = "^1.7.0"
flake8 = "^5.0.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
